@@ -20,6 +20,7 @@ else # <----------------------------------------  Show [Edit Account] form.
       end
     end
     page.call "crm.highlight_off", id             # Disable onMouseOver for the list item.
+    page.call "crm.hide_form", :create_account    # Hide [Create Account] form if any.
     page[id].replace_html :partial => "edit"      # Show [Edit Account] form.
 
   elsif params[:cancel] == "false"                # Called from title of the account landing page...
