@@ -20,6 +20,7 @@ else # <----------------------------------------  Show [Edit Campaign] form.
       end
     end
     page.call "crm.highlight_off", id             # Disable onMouseOver for the list item.
+    page.call "crm.hide_form", :create_campaign   # Hide [Create Campaign] form if any.
     page[id].replace_html :partial => "edit"      # Show [Edit Campaign] form.
 
   elsif params[:cancel] == "false"                # Called from title of the campaign landing page...
