@@ -20,6 +20,7 @@ else # <----------------------------------------- Show [Edit Contact] form.
       end
     end
     page.call "crm.highlight_off", id             # Disable onMouseOver for the list item.
+    page.call "crm.hide_form", :create_contact    # Hide [Create Contact] form if any.
     page[id].replace_html :partial => "edit"      # Show [Edit Contact] form.
 
   elsif params[:cancel] == "false"                # Called from title of the contact landing page...
