@@ -20,6 +20,7 @@ else # <----------------------------------------- Show requested [Edit Opportuni
       end
     end
     page.call "crm.highlight_off", id             # Disable onMouseOver for the list item.
+    page.call "crm.hide_form", :create_opportunity# Hide [Create Opportunity] form if any.
     page[id].replace_html :partial => "edit"      # Show [Edit Opportunity] form.
 
   elsif params[:cancel] == "false"                # Called from title of the opportunity landing page...
