@@ -5,10 +5,10 @@ describe "/leads/convert.js.rjs" do
   
   before(:each) do
     login_and_assign
-    @account = Factory(:account)
-    assigns[:lead] = Factory(:lead, :id => 42, :user => @current_user)
+    
+    assigns[:lead] = @lead = Factory(:lead, :user => @current_user)
     assigns[:users] = [ @current_user ]
-    assigns[:account] = @account
+    assigns[:account] = @account = Factory(:account)
     assigns[:accounts] = [ @account ]
     assigns[:opportunity] = Factory(:opportunity)
   end
@@ -17,8 +17,8 @@ describe "/leads/convert.js.rjs" do
     params[:cancel] = "true"
     
     render "leads/convert.js.rjs"
-    response.should have_rjs("lead_42") do |rjs|
-      with_tag("li[id=lead_42]")
+    response.should have_rjs("lead_#{@lead.id}") do |rjs|
+      with_tag("li[id=lead_#{@lead.id}]")
     end
   end
 
@@ -32,28 +32,29 @@ describe "/leads/convert.js.rjs" do
   
   it "convert: should hide previously open [Convert Lead] and replace it with lead partial" do
     params[:cancel] = nil
-    assigns[:previous] = Factory(:lead, :id => 41, :user => @current_user)
+    assigns[:previous] = previous = Factory(:lead, :user => @current_user)
 
     render "leads/convert.js.rjs"
-    response.should have_rjs("lead_41") do |rjs|
-      with_tag("li[id=lead_41]")
+    response.should have_rjs("lead_#{previous.id}") do |rjs|
+      with_tag("li[id=lead_#{previous.id}]")
     end
   end
 
   it "convert: should remove previously open [Convert Lead] if it's no longer available" do
     params[:cancel] = nil
-    assigns[:previous] = 41
+    assigns[:previous] = previous = 41
 
     render "leads/convert.js.rjs"
-    response.should include_text(%Q/crm.flick("lead_41", "remove");/)
+    response.should include_text(%Q/crm.flick("lead_#{previous}", "remove");/)
   end
   
-  it "convert from leads index page: should turn off highlight and replace current lead with [Convert Lead] form" do
+  it "convert from leads index page: should turn off highlight, hide [Create Lead] form, and replace current lead with [Convert Lead] form" do
     params[:cancel] = nil
     
     render "leads/convert.js.rjs"
-    response.should include_text('crm.highlight_off("lead_42");')
-    response.should have_rjs("lead_42") do |rjs|
+    response.should include_text(%Q/crm.highlight_off("lead_#{@lead.id}");/)
+    response.should include_text('crm.hide_form("create_lead")')
+    response.should have_rjs("lead_#{@lead.id}") do |rjs|
       with_tag("form[class=edit_lead]")
     end
   end
